upgrade reducer Category

--- a/src/components/PageDescription/pageDescription.scss
+++ b/src/components/PageDescription/pageDescription.scss
@@ -1,11 +1,10 @@
-.sectionContainer{
-  font-family:  'Space Grotesk';
-  color: #FFFFFF;
+.pageDescriptionContainer {
+  color: #ffffff;
   letter-spacing: -0.02em;
   font-style: normal;
 }
 
-.sectionTitle{
+.pageDescriptionTitle {
   width: 612px;
   font-weight: 700;
   font-size: 54px;
@@ -13,7 +12,7 @@
   margin: 36px 0;
 }
 
-.sectionDescription{
+.pageDescriptionText {
   width: 586px;
   font-style: normal;
   font-weight: 400;
