--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -1,28 +1,27 @@
-.movieCardContainer{
+.cardContainer {
   display: flex;
   flex-direction: column;
   width: 188px;
   margin-right: 24px;
-  &:hover{
+  &:hover {
     cursor: pointer;
     transform: scale(1.1);
   }
 }
 
-.imageMovie{
+.cardImage {
   width: 188px;
   height: 282px;
   border-radius: 6px;
 }
 
-.movieTitle{
-  font-family: 'Space Grotesk';
+.cardTitle {
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 110%;
   letter-spacing: -0.02em;
   color: #141414;
-  margin-top:16px;
-  margin-bottom:6px;
+  margin-top: 16px;
+  margin-bottom: 6px;
 }
