--- a/src/components/MoviesHeader/moviesHeader.scss
+++ b/src/components/MoviesHeader/moviesHeader.scss
@@ -1,9 +1,11 @@
-.filmsSectionHeader{
-  position: absolute;
-  top:0;
-  height: 500px;
-  width: 100vw;
+.filmsSectionHeader {
   background-image: url("../../assets/headerBackgroundImage.png");
   background-size: 100%;
   background-repeat: no-repeat;
+  padding-top: 190px;
+  padding-left: 100px;
+  width: 1380px;
+  height: 500px;
+  left: 0px;
+  top: 0px;
 }
